--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,4 +5,104 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
+body{
+    background: $light;
+    font-family: sans-serif;
+}
+// hero
+
+.hero-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 24px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center; 
+    height: 90vh; 
+    
+    @include tablet{
+        grid-template-columns: 1fr;
+    }
+
+    &-left{
+        width: 100%;
+        line-height: 1.2;
+
+        @include tablet{
+            padding: 5rem 0;
+        }
+
+        @include mobile {
+            line-height: 1.5;
+        }
+        & h1{
+            color: $lime;
+            font-size: 4rem;
+
+            @include mobile {
+                font-size: 1.5rem;
+            }
+        }
+
+        & h2 {
+            font-size: 4rem;
+            color: $dark;
+
+            @include mobile{
+                font-size: 2rem;
+            }
+        }
+
+        & p {
+            font-size: 2rem;
+            color: $dark;
+            margin-top: 1rem;
+            font-weight: 700;
+
+            @include mobile{
+                font-size: 1.5rem;
+            }
+        }
+         
+    }
+    &-btn{
+        background-color: $lime;
+        font-size: 1rem;
+        padding:14px 32px;
+        border: none;
+        border-radius: 4px;
+        margin-top: 2rem;
+        cursor: pointer;
+        position: relative;
+        transition: all 0.3s;
+
+        & a{
+            text-decoration: none;
+            color: $light;
+            z-index: 1;
+            position: relative;
+        }
+        &:after{
+            position: absolute;
+            content: "";
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 100%;
+            background: $orangeRed;
+            transition: all 0.3s;
+            border-radius: 4px;
+        }
+        &:hover:after{
+            width: 100%;
+        }
+    }
+    
+    &-img{
+        width: 100%;
+    }
+
+} 
